## Process this file with automake to produce Makefile.in
## =====================================================================
##
##     Makefile.am
##
##     eCos host-side software toplevel makefile
##
## =====================================================================
## ####ECOSHOSTGPLCOPYRIGHTBEGIN####                                        
## -------------------------------------------                              
## This file is part of the eCos host tools.                                
## Copyright (C) 1998, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
##
## This program is free software; you can redistribute it and/or modify     
## it under the terms of the GNU General Public License as published by     
## the Free Software Foundation; either version 2 or (at your option) any   
## later version.                                                           
##
## This program is distributed in the hope that it will be useful, but      
## WITHOUT ANY WARRANTY; without even the implied warranty of               
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU        
## General Public License for more details.                                 
##
## You should have received a copy of the GNU General Public License        
## along with this program; if not, write to the                            
## Free Software Foundation, Inc., 51 Franklin Street,                      
## Fifth Floor, Boston, MA  02110-1301, USA.                                
## -------------------------------------------                              
## ####ECOSHOSTGPLCOPYRIGHTEND####                                          
## =====================================================================
#######DESCRIPTIONBEGIN####
##
## Author(s):	bartv
## Contact(s):	bartv
## Date:	1998/12/17
## Version:	0.01
##
######DESCRIPTIONEND####
## =====================================================================

AUTOMAKE_OPTIONS = 1.10 foreign
SUBDIRS          = @subdirs@
