dnl Process this file with autoconf to produce a configure script.
dnl ====================================================================
dnl
dnl     configure.in
dnl
dnl     Top-level configure script for eCos host-side software.
dnl
dnl ====================================================================
dnl####COPYRIGHTBEGIN####
dnl                                                                         
dnl ----------------------------------------------------------------------------
dnl Copyright (C) 1998, 1999, 2000 Red Hat, Inc.
dnl
dnl This file is part of the eCos host tools.
dnl
dnl This program is free software; you can redistribute it and/or modify it 
dnl under the terms of the GNU General Public License as published by the Free 
dnl Software Foundation; either version 2 of the License, or (at your option) 
dnl any later version.
dnl 
dnl This program is distributed in the hope that it will be useful, but WITHOUT 
dnl ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or 
dnl FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for 
dnl more details.
dnl 
dnl You should have received a copy of the GNU General Public License along with
dnl this program; if not, write to the Free Software Foundation, Inc., 
dnl 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
dnl
dnl ----------------------------------------------------------------------------
dnl                                                                          
dnl####COPYRIGHTEND####
dnl ====================================================================
dnl#####DESCRIPTIONBEGIN####
dnl
dnl Author(s):	bartv
dnl Contact(s):	bartv
dnl Date:	1998/12/17
dnl Version:	0.01
dnl
dnl####DESCRIPTIONEND####
dnl ====================================================================

AC_INIT(config.guess)
AC_CANONICAL_HOST
AM_INIT_AUTOMAKE(eCos,2.0,0)
AM_MAINTAINER_MODE

dnl Some of the decisions made depend on the compiler that is being used,
dnl so the usual set of compiler-related macros is needed here.
AC_PROG_MAKE_SET
AC_CYGWIN
AC_PROG_CC
AC_PROG_CXX
AC_OBJEXT
AC_EXEEXT
CYG_AC_PROG_MSVC

dnl The eCos host-side only supports native builds, not cross-compilation.
dnl Cross-compilation should not be impossible, but various macros
dnl including testing for 64-bit require the ability to run code.
if test "${cross_compiling}" = "yes"; then
  AC_MSG_ERROR(cross-compilation of this package is not supported)
fi

dnl Allow the usual assertion and trace related options.
CYG_AC_ARG_INFRASTRUCTURE

dnl What version of Tcl should be used?
CYG_AC_PATH_TCL

dnl Some of the packages are compulsory and do not depend on the compiler
dnl that is being used. Other packages are only applicable to specific
dnl compilers, and in addition it should be possible to enable or
dnl disable them as convenient.
dnl
dnl The host-side infrastructure and libcdl are always needed.
ECOS_DIRS="infra libcdl"

dnl --------------------------------------------------------------------
dnl Experimental support for building the configtool in the autoconf
dnl world. This is not yet functional, so it is all commented out.

dnl dnl Building of the standalone configtool and the configtool plugin
dnl dnl can be controlled by the user. The plugin is normally disabled,
dnl dnl unless the user specifies that IDE support is necessary.
dnl
dnl AC_ARG_ENABLE(standalone-configtool,[--enable-standalone-configtool enable the stand-alone configtool],
dnl [case "${enableval}" in
dnl   yes) ecosflags_enable_standalone_configtool="yes" ;;
dnl   *)   ecosflags_enable_standalone_configtool="no"  ;;
dnl esac
dnl ],[
dnl   ecosflags_enable_standalone_configtool="yes"
dnl ])
dnl AC_ARG_ENABLE(configtool-plugin,[ --enable-configtool-plugin enable the IDE configtool plugin],
dnl [case "${enableval}" in
dnl   yes) ecosflags_enable_configtool-plugin="yes" ;;
dnl   *)   ecosflags_enable_configtool-plugin="no"  ;;
dnl esac
dnl ],[
dnl   ecosflags_enable_configtool_plugin="no"
dnl ])
dnl 
dnl dnl Initially only VC++ versions of the configtool are available.
dnl dnl If using another compiler then just disable these tools.
dnl if test "${MSVC}" = "no"; then
dnl   ecosflags_enable_standalone_configtool="no"
dnl   ecosflags_enable_configtool_plugin="no"
dnl fi
dnl 
dnl if test "${ecosflags_enable_standalone_configtool}" = "yes"; then
dnl   ECOS_DIRS="${ECOS_DIRS} tools/configtool/standalone/win32"
dnl fi
dnl AC_OUTPUT_COMMANDS([
dnl   if test "${ecosflags_enable_standalone_configtool}" = "yes"; then
dnl     test -d tools                             || mkdir tools
dnl     test -d tools/configtool                  || mkdir tools/configtool
dnl     test -d tools/configtool/standalone       || mkdir tools/configtool/standalone
dnl     test -d tools/configtool/standalone/win32 || mkdir tools/configtool/standalone/win32
dnl   fi
dnl ],[
dnl   ecosflags_enable_standalone_configtool=${ecosflags_enable_standalone_configtool}
dnl ])
dnl if test "${ecosflags_enable_configtool_plugin}" = "yes"; then
dnl   ECOS_DIRS="${ECOS_DIRS} tools/configtool/plugin/win32"
dnl fi
dnl AC_OUTPUT_COMMANDS([
dnl   if test "${ecosflags_enable_configtool_plugin}" = "yes"; then
dnl     test -d tools                             || mkdir tools
dnl     test -d tools/configtool                  || mkdir tools/configtool
dnl     test -d tools/configtool/plugin           || mkdir tools/configtool/plugin
dnl     test -d tools/configtool/plugin/win32     || mkdir tools/configtool/plugin/win32
dnl   fi
dnl ],[
dnl   ecosflags_enable_configtool_plugin=${ecosflags_enable_configtool_plugin}
dnl ])

dnl --------------------------------------------------------------------

dnl Add any other directories that are autoconfiscated and present
if test -f ${srcdir}/tools/ecostest/common/configure; then
  ECOS_DIRS="${ECOS_DIRS} tools/ecostest/common"
  AC_OUTPUT_COMMANDS([
    test -d tools 			     || mkdir tools
    test -d tools/ecostest 		     || mkdir tools/ecostest
    test -d tools/ecostest/common 	     || mkdir tools/ecostest/common
  ])
fi

if test -d ${srcdir}/tools/configtool/standalone/common; then
  ECOS_DIRS="${ECOS_DIRS} tools/configtool/standalone/common"
  AC_OUTPUT_COMMANDS([
    test -d tools   			       || mkdir tools
    test -d tools/configtool                   || mkdir tools/configtool
    test -d tools/configtool/standalone        || mkdir tools/configtool/standalone
    test -d tools/configtool/standalone/common || mkdir tools/configtool/standalone/common
  ])
fi

AC_SUBST(ECOS_DIRS)
AC_CONFIG_SUBDIRS(${ECOS_DIRS})
AC_OUTPUT(Makefile)
