dnl Process this file with autoconf to produce a configure script.
dnl ====================================================================
dnl
dnl     configure.in
dnl
dnl     Top-level configure script for eCos host-side software.
dnl
dnl ====================================================================
dnl ####ECOSHOSTGPLCOPYRIGHTBEGIN####                                       
dnl -------------------------------------------                             
dnl This file is part of the eCos host tools.                               
dnl Copyright (C) 1998, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
dnl
dnl This program is free software; you can redistribute it and/or modify    
dnl it under the terms of the GNU General Public License as published by    
dnl the Free Software Foundation; either version 2 or (at your option) any  
dnl later version.                                                          
dnl
dnl This program is distributed in the hope that it will be useful, but     
dnl WITHOUT ANY WARRANTY; without even the implied warranty of              
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU       
dnl General Public License for more details.                                
dnl
dnl You should have received a copy of the GNU General Public License       
dnl along with this program; if not, write to the                           
dnl Free Software Foundation, Inc., 51 Franklin Street,                     
dnl Fifth Floor, Boston, MA  02110-1301, USA.                               
dnl -------------------------------------------                             
dnl ####ECOSHOSTGPLCOPYRIGHTEND####                                         
dnl ====================================================================
dnl#####DESCRIPTIONBEGIN####
dnl
dnl Author(s):	bartv
dnl Contact(s):	bartv
dnl Date:	1998/12/17
dnl Version:	0.01
dnl
dnl####DESCRIPTIONEND####
dnl ====================================================================

dnl Generic initialization
AC_INIT(../acsupport/config.guess)
AC_CONFIG_AUX_DIR(../acsupport)
AC_CANONICAL_HOST
AM_INIT_AUTOMAKE(eCos,2.0,0)
AM_MAINTAINER_MODE
ECOS_CHECK_BUILD_ne_SRC

dnl Nothing actually gets built in this directory, so there is no
dnl point in worrying about compiler flags etc. Instead just
dnl recurse into appropriate subdirectories. The current directory
dnl tree is rather deep, so to avoid having to create lots of intermediate
dnl configure scripts and associated files the required build tree
dnl subdirectories are created here.
AC_OUTPUT_COMMANDS([
    test -d tools   			       || mkdir tools
    test -d tools/configtool                   || mkdir tools/configtool
    test -d tools/configtool/standalone        || mkdir tools/configtool/standalone
    test -d tools/configtool/standalone/common || mkdir tools/configtool/standalone/common
])

dnl AC_SUBST(SUBDIRS)
dnl AC_CONFIG_SUBDIRS([${SUBDIRS}])
AC_CONFIG_SUBDIRS([infra])
AC_CONFIG_SUBDIRS([libcdl])
AC_CONFIG_SUBDIRS([tools/configtool/standalone/common])
AC_OUTPUT(Makefile)
